--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-tactile
+title: Welcome to Peter's homepage!
+description: Feel free to bookmark to be the first to view my roject updates!
